Prevents header image collapsing on less tall screens

--- a/app/_scss/sitewide/_base.scss
+++ b/app/_scss/sitewide/_base.scss
@@ -31,7 +31,7 @@ body>section:last-of-type {
 
 body>.flex-col {
 		height: 67%;
-		min-height: 300px;
+		min-height: 500px;
 
 		#image-splash {
 			flex: 1 0 auto;
